[project]
name = "montecasino"
version = "0.7.8rc2"
# dynamic = ["version"]
description = "MonteCasino enables fast probabilistic modelling"
authors = [{ name = "Adolph Vogel", email = "ajvogel@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
]

[tool.hatch.build.targets.sdist]
include = ["montecasino/*.so"]

[tool.hatch.build.targets.wheel]
include = ["montecasino/*.so"]

[dependency-groups]
dev = [
    "cython>=3.1.2",
    "ipython>=9.4.0",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyqt6>=6.9.1",
    "pytest>=8.4.1",
    "quarto>=0.1.0",
    "setuptools>=80.9.0",
]


# [tool.versioningit.format]
# # Format used when there have been commits since the most recent tag:
# distance = "{base_version}.post{distance}+{vcs}{rev}"
# # Example formatted version: 1.2.3.post42+ge174a1f

# # Format used when there are uncommitted changes:
# dirty = "{base_version}+d{build_date:%Y%m%d}"
# # Example formatted version: 1.2.3+d20230922

# # Format used when there are both commits and uncommitted changes:
# distance-dirty = "{base_version}.post{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"
# # Example formatted version: 1.2.3.post42+ge174a1f.d20230922


[build-system]
requires = ["setuptools>=80", "cython>=3.1.2","versioningit"]
build-backend = "setuptools.build_meta"
